--- a/CV.html
+++ b/CV.html
@@ -45,7 +45,7 @@
         </tr>
             </table>
 
-              <h3>Skils</h3>
+              <h3>Skills</h3>
               <hr color="black" size="3">
               <lable> Microsoft Office
                 <br>
